// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test checkbox example 1`] = `
"<div class=\\"app-type\\">基本使用</div>
<div class=\\"var-checkbox__wrap\\">
  <div class=\\"var-checkbox\\">
    <div class=\\"var-checkbox__action var-checkbox--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon\\" style=\\"transition-duration: 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
    <div class=\\"var-checkbox__text\\">当前的值: false</div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\">设置状态值</div>
<div class=\\"var-checkbox__wrap\\">
  <div class=\\"var-checkbox\\">
    <div class=\\"var-checkbox__action var-checkbox--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon\\" style=\\"transition-duration: 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
    <div class=\\"var-checkbox__text\\">当前的值: 0</div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\">修改图标和颜色</div>
<div class=\\"var-checkbox__wrap\\">
  <div class=\\"var-checkbox\\">
    <div class=\\"var-checkbox__action var-checkbox--unchecked\\" style=\\"color: rgb(233, 158, 180);\\"><i class=\\"var-icon var-icon--set var-icon-heart-half-full\\" style=\\"transition-duration: 0ms; font-size: 24px;\\"></i></div>
    <div class=\\"var-checkbox__text\\">当前的值: false</div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\">禁用</div>
<div class=\\"var-checkbox__wrap\\">
  <div class=\\"var-checkbox\\">
    <div class=\\"var-checkbox__action var-checkbox--unchecked var-checkbox--disabled\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon\\" style=\\"transition-duration: 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
    <div class=\\"var-checkbox__text var-checkbox--disabled\\">当前的值: false</div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\">只读</div>
<div class=\\"var-checkbox__wrap\\">
  <div class=\\"var-checkbox\\">
    <div class=\\"var-checkbox__action var-checkbox--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon\\" style=\\"transition-duration: 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
    <div class=\\"var-checkbox__text\\">当前的值: false</div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\">复选框组</div>
<div class=\\"var-checkbox-group__wrap\\">
  <div class=\\"var-checkbox-group var-checkbox-group--horizontal\\">
    <div class=\\"var-checkbox__wrap\\">
      <div class=\\"var-checkbox\\">
        <div class=\\"var-checkbox__action var-checkbox--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon\\" style=\\"transition-duration: 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
        <div class=\\"var-checkbox__text\\">吃饭</div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
    <div class=\\"var-checkbox__wrap\\">
      <div class=\\"var-checkbox\\">
        <div class=\\"var-checkbox__action var-checkbox--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon\\" style=\\"transition-duration: 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
        <div class=\\"var-checkbox__text\\">睡觉</div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--primary var-elevation--2 button\\" type=\\"button\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">全选</div>
      <div class=\\"var-button__overlay\\"></div>
    </button><button class=\\"var-button var--box var-button--normal var--inline-flex var-button--primary var-elevation--2 button\\" type=\\"button\\">
      <!--v-if-->
      <div class=\\"var-button__content\\">反选</div>
      <div class=\\"var-button__overlay\\"></div>
    </button>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"relation\\">当前的值: []</div>
<div class=\\"app-type\\">复选框字段校验</div>
<div class=\\"var-checkbox__wrap\\">
  <div class=\\"var-checkbox\\">
    <div class=\\"var-checkbox__action var-checkbox--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon\\" style=\\"transition-duration: 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
    <div class=\\"var-checkbox__text\\">当前的值: false</div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\">复选框组字段校验</div>
<div class=\\"var-checkbox-group__wrap\\">
  <div class=\\"var-checkbox-group var-checkbox-group--horizontal\\">
    <div class=\\"var-checkbox__wrap\\">
      <div class=\\"var-checkbox\\">
        <div class=\\"var-checkbox__action var-checkbox--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon\\" style=\\"transition-duration: 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
        <div class=\\"var-checkbox__text\\">吃饭</div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
    <div class=\\"var-checkbox__wrap\\">
      <div class=\\"var-checkbox\\">
        <div class=\\"var-checkbox__action var-checkbox--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon\\" style=\\"transition-duration: 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
        <div class=\\"var-checkbox__text\\">睡觉</div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"relation\\">当前的值: []</div>
<div class=\\"space\\"></div>"
`;

exports[`test checkbox group layout direction 1`] = `
"<div class=\\"var-checkbox-group__wrap\\">
  <div class=\\"var-checkbox-group var-checkbox-group--vertical\\">
    <div class=\\"var-checkbox__wrap\\">
      <div class=\\"var-checkbox\\">
        <div class=\\"var-checkbox__action var-checkbox--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon\\" style=\\"transition-duration: 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
        <div class=\\"var-checkbox__text\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
    <div class=\\"var-checkbox__wrap\\">
      <div class=\\"var-checkbox\\">
        <div class=\\"var-checkbox__action var-checkbox--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon\\" style=\\"transition-duration: 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
        <div class=\\"var-checkbox__text\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test checkbox group validation 1`] = `
"<div class=\\"var-checkbox-group__wrap\\">
  <div class=\\"var-checkbox-group var-checkbox-group--horizontal\\">
    <div class=\\"var-checkbox__wrap\\">
      <div class=\\"var-checkbox\\">
        <div class=\\"var-checkbox__action var-checkbox--unchecked var-checkbox--error\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon\\" style=\\"transition-duration: 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
        <div class=\\"var-checkbox__text var-checkbox--error\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
    <div class=\\"var-checkbox__wrap\\">
      <div class=\\"var-checkbox\\">
        <div class=\\"var-checkbox__action var-checkbox--unchecked var-checkbox--error\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon\\" style=\\"transition-duration: 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
        <div class=\\"var-checkbox__text var-checkbox--error\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub>
    <div class=\\"var-form-details\\">
      <div class=\\"var-form-details__error-message\\">
        <transition-stub>
          <div>至少选一个</div>
        </transition-stub>
      </div>
      <div class=\\"var-form-details__extra-message\\">
        <transition-stub>
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test checkbox group validation 2`] = `
"<div class=\\"var-checkbox-group__wrap\\">
  <div class=\\"var-checkbox-group var-checkbox-group--horizontal\\">
    <div class=\\"var-checkbox__wrap\\">
      <div class=\\"var-checkbox\\">
        <div class=\\"var-checkbox__action var-checkbox--checked\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-marked var-checkbox__icon var-checkbox--with-animation\\" style=\\"transition-duration: 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
        <div class=\\"var-checkbox__text\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
    <div class=\\"var-checkbox__wrap\\">
      <div class=\\"var-checkbox\\">
        <div class=\\"var-checkbox__action var-checkbox--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon\\" style=\\"transition-duration: 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
        <div class=\\"var-checkbox__text\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test checkbox validation 1`] = `
"<div class=\\"var-checkbox__wrap\\">
  <div class=\\"var-checkbox\\">
    <div class=\\"var-checkbox__action var-checkbox--unchecked var-checkbox--error\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-blank-outline var-checkbox__icon\\" style=\\"transition-duration: 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
    <div class=\\"var-checkbox__text var-checkbox--error\\"></div>
  </div>
  <transition-stub>
    <div class=\\"var-form-details\\">
      <div class=\\"var-form-details__error-message\\">
        <transition-stub>
          <div>您必须勾选</div>
        </transition-stub>
      </div>
      <div class=\\"var-form-details__extra-message\\">
        <transition-stub>
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test checkbox validation 2`] = `
"<div class=\\"var-checkbox__wrap\\">
  <div class=\\"var-checkbox\\">
    <div class=\\"var-checkbox__action var-checkbox--checked\\"><i class=\\"var-icon var-icon--set var-icon-checkbox-marked var-checkbox__icon var-checkbox--with-animation\\" style=\\"transition-duration: 0ms;\\" var-checkbox-cover=\\"\\"></i></div>
    <div class=\\"var-checkbox__text\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;
